<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宠物</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zhuce">注册</string>
    <string name="denglu">登录</string>
    <string name="shoujihao">手机号</string>
    <string name="yanzhengma">验证码</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="shezhimima">设置密码</string>
    <string name="yaoqingma">邀请码</string>
    <string name="tongyi_xieyi">同意《隐私与服务协议》</string>
    <string name="lijijiaru">立即加入</string>
    <string name="give_pet_home">让每个宠物都有一个家</string>
    <string name="mima">密码</string>
    <string name="denglu_yonghu_name">用户名/邮箱/手机号</string>
    <string name="other_denglu">第三方登录</string>
    <string name="start_pet">开启我的萌宠之旅</string>
    <string name="dianping">点评</string>
    <string name="tijiao">提交</string>
    <string name="fabu">发布</string>

    <!-- 我  -->
    <string name="beamon_pet">比蒙宠物</string>
    <string name="mine">我的</string>
    <string name="nickname">昵称</string>
    <string name="id">ID</string>
    <string name="user_nickname">天使守护添</string>
    <string name="user_id">5623511</string>
    <string name="concern">关注</string>
    <string name="concern_num">226</string>
    <string name="fans">粉丝</string>
    <string name="fans_num">186</string>
    <string name="collection">收藏</string>
    <string name="collection_num">166</string>
    <string name="data_information">资料信息</string>
    <string name="account_manager">账户管理</string>
    <string name="about_lovely_pets">关于萌宠</string>
    <string name="set">设置</string>
    <!-- 关于萌宠  -->
    <string name="version">萌宠Android版</string>
    <string name="version_num">1.0.0.1</string>
    <string name="to_rating">去评分</string>
    <string name="function_introduction">功能介绍</string>
    <string name="system_notification">系统通知</string>
    <string name="report_complaint">举报与投诉</string>
    <string name="check_new_version">检查新版本</string>
    <!-- 设置  -->
    <string name="lock_screen_password">锁屏密码</string>
    <string name="lovely_pet_to_share_to_friends">把萌宠分享给朋友</string>
    <string name="feedback">意见反馈</string>
    <string name="user_help">用户帮助</string>
    <string name="latest_announcement">最新公告</string>
    <string name="clear_cache">清除缓存</string>
    <string name="exit_login">退出登录</string>
    <!-- 分享  -->
    <string name="wechat">微信</string>
    <string name="QQ">QQ</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="qq_zone">QQ空间</string>
    <string name="friends_group">朋友圈</string>
    <string name="cancel">取消</string>
    <!-- 账户管理  -->
    <string name="save">保存</string>
    <string name="reset_password">修改密码</string>
    <string name="reset_telephone_number">修改手机号</string>
    <string name="reset_mailbox">修改邮箱</string>
    <string name="security_set">密保设置</string>
    <!-- 资料信息 -->
    <string name="input_nickname">请输入名字</string>
    <string name="gender">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="birth">出生</string>
    <string name="input_birthday">请输入日期</string>
    <string name="star_sign">星座</string>
    <string name="input_star_sign">请输入星座</string>
    <string name="occupation">职业</string>
    <string name="input_occupation">请输入职业</string>
    <string name="company">公司</string>
    <string name="input_company">请填写公司</string>
    <string name="address">地址</string>
    <string name="input_address">请输入地址</string>
    <string name="hometown">故乡</string>
    <string name="email">邮箱</string>
    <string name="input_email">13426345676@qq.com</string>
    <string name="personality_desdcript">个性说明</string>
    <string name="input_personality_desdcript">请输入个性说明</string>
    <!-- 设置 登录退出 -->
    <string name="exit_login_account">退出当前账号</string>
    <string name="close_pet">关闭宠物</string>
    <!-- 设置 意见反馈  -->
    <string name="close">关闭</string>
    <string name="max_num">400</string>
    <string name="input_question">请输入遇到的问题或建议</string>
    <string name="add_picture">添加图片说明</string>
    <string name="contant_phone">联系电话</string>
    <string name="use_to_contant">选项，便于我们联系你</string>
    <string name="submit">提交</string>
    <!-- 账号管理 修改邮箱 -->
    <string name="input_new_eamil">新邮箱地址</string>
    <string name="confirm_email">确认新邮箱地址</string>
    <string name="ensure">确定</string>
    <!-- 账号管理 修改密码 -->
    <string name="input_new_password">新密码</string>
    <string name="confirm_password">确认新密码</string>
    <!-- 账号管理 修改电话号码 -->
    <string name="input_new_telephone">手机号码</string>
    <string name="confirm_telephone">确认新手机号码</string>   
    <!-- 用户帮助  -->
    <string name="pet">宠物</string>
    <string name="pet_helper">宠物小助手</string>
    <!-- 更换头像  -->
    <string name="take_photo">拍照</string>
    <string name="from_album">从相册中选择</string>
    <!-- 密保设置  -->
    <string name="question_one">问题一：</string>
    <string name="question_two">问题二：</string>
    <string name="question_three">问题三：</string>
    <!-- 密保设置 答案 -->
    <string name="answer_one">答案一：</string>
    <string name="answer_two">答案二：</string>
    <string name="answer_three">答案三：</string>
    <!-- 分享  -->
    <string name="send_to">发送给：</string>
    <string name="link">链接》宠物APP</string>
    <string name="send">发送</string>

</resources>
