<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/title_bar" >

        <ImageButton
            android:id="@+id/back_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/data_information"
            android:textColor="@color/mine_user_word_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/save_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:text="@string/save"
            android:textColor="@color/mine_user_word_color"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/nickname"
            android:textColor="@color/mine_word_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_nickname"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/input_nickname"
            android:textColorHint="@color/hint_word_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/gender"
            android:textColor="@color/mine_word_color"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:button="@null"
                android:checked="true"
                android:drawableEnd="@android:drawable/btn_radio"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/boy"
                android:textColor="@color/mine_word_color"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:button="@null"
                android:drawableEnd="@android:drawable/btn_radio"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/girl"
                android:textColor="@color/mine_word_color"
                android:textSize="14sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/birth"
            android:textColor="@color/mine_word_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_birthday"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/input_birthday"
            android:textColorHint="@color/hint_word_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/star_sign"
            android:textColor="@color/mine_word_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_star_sign"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/input_star_sign"
            android:textColorHint="@color/hint_word_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/occupation"
            android:textColor="@color/mine_word_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_occupation"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/input_occupation"
            android:textColorHint="@color/hint_word_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/company"
            android:textColor="@color/mine_word_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_company"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/input_company"
            android:textColorHint="@color/hint_word_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/address"
            android:textColor="@color/mine_word_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_address"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/input_address"
            android:textColorHint="@color/hint_word_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/hometown"
            android:textColor="@color/mine_word_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_hometown"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/input_address"
            android:textColorHint="@color/hint_word_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textColor="@color/mine_word_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_mail"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:hint="@string/input_email"
            android:textColorHint="@color/hint_word_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/personality_desdcript"
            android:textColor="@color/mine_word_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_personality_desdcript"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/input_personality_desdcript"
            android:textColorHint="@color/hint_word_color"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>