<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/send_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_to" />

            <TextView
                android:id="@+id/you_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_lovely_pets" />
        </LinearLayout>

        <TextView
            android:id="@+id/link_pet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:text="@string/link" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/background_gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cancel_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="3dp"
                android:background="@color/background_gray" />

            <TextView
                android:id="@+id/send_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/send" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>