<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/update_icon_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/take_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/take_photo" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/background_gray" />

        <TextView
            android:id="@+id/from_album"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/from_album" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:alpha="0.5"
            android:background="@color/black" />

        <TextView
            android:id="@+id/cancel_update_icon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>